[package]
name = "lockbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "mutex"
harness = false

[[bench]]
name = "rwlock"
harness = false

[dev-dependencies]
criterion = "0.3.5"
parking_lot = "0.12.0"

[features]
std-mutex = []
parking-lot-mutex = []
